# projecteweb2023-1

./: README.md  apiclient1.py  pyproject.toml  webscrape.py
eazytapa/eazytapa/: settings.py  urls.py
eazytapa/web/: admin.py  models.py  views.py
eazytapa/web/migrations/: 0001_initial.py
eazytapa/web/templates/web/: bar.html  index.html  tapa.html
webclient/: apiclient1.py  apiclient2.py
