[tool.poetry]
name = "projecteweb2023-1"
version = "0.1.0"
description = ""
authors = ["Carles Mateu <carlesm@carlesm.com>"]
readme = "README.md"
packages = [{include = "projecteweb2023_1"}]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^1.26.14"
bs4 = "^0.0.1"
xmltodict = "^0.13.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
